--- a/src/scss/utils/_variable.scss
+++ b/src/scss/utils/_variable.scss
@@ -1,2 +1,13 @@
+$white: #fff;
+$dark-brown: #14110E;
+$second-brown: #1C1814;
+$light-brown: #C99E71;
+$dark-blue: #121315;
+$inter-bold:'Inter Bold';
+$inter-regular:'Inter Regular';
+$righteous-regular:'Righteous Regular';
+$urbanist-medium:'Urbanist Medium';
+$urbanist-semiBold:'Urbanist SemiBold';
+$sans-serif: sans-serif;
 $tablet-bp: 1024px;
 $mobile-bp: 768px;
