done new Menu section, started review section

--- a/src/scss/sections/_about-us.scss
+++ b/src/scss/sections/_about-us.scss
@@ -1,5 +1,4 @@
 .about-us {
-    background-color: $dark-brown;
     padding: 70px 0;
     &__grid {
         display: grid;
@@ -7,6 +6,7 @@
         grid-template-rows: repeat(2, 1fr);
         grid-column-gap: 32px;
         grid-row-gap: 32px;
+        justify-content: center;
         &-item-1 {
             grid-area: 1 / 1 / 2 / 2;
         }
