--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,96 @@
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+.slick-list:focus {
+  outline: none;
+}
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.slick-track:before, .slick-track:after {
+  content: "";
+  display: table;
+}
+.slick-track:after {
+  clear: both;
+}
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none;
+}
+[dir=rtl] .slick-slide {
+  float: right;
+}
+.slick-slide img {
+  display: block;
+}
+.slick-slide.slick-loading img {
+  display: none;
+}
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+.slick-initialized .slick-slide {
+  display: block;
+}
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -427,6 +520,10 @@ button {
   padding: 0 15px;
 }
 
+body {
+  background-color: #14110E;
+}
+
 .btn {
   display: inline-block;
   font-size: 18px;
@@ -553,7 +650,6 @@ button {
 }
 
 .about-us {
-  background-color: #14110E;
   padding: 70px 0;
 }
 .about-us__grid {
@@ -562,6 +658,7 @@ button {
   grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 32px;
   grid-row-gap: 32px;
+  justify-content: center;
 }
 .about-us__grid-item-1 {
   grid-area: 1/1/2/2;
@@ -608,7 +705,6 @@ button {
 
 .products {
   padding: 70px 0;
-  background-color: #14110E;
 }
 .products__subtitle {
   font-family: "Urbanist SemiBold", sans-serif;
@@ -639,6 +735,8 @@ button {
   transform: translate(0);
 }
 .products__slider-link {
+  display: block;
+  margin: 0 18px;
   background-color: #121315;
   width: 100%;
   max-width: 30%;
@@ -710,18 +808,22 @@ button {
 }
 
 .technics {
-  background-color: #1C1814;
   padding: 70px 0;
+}
+.technics__container {
+  max-width: 1200px;
 }
 .technics__wrap {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
+  padding: 70px 0;
+  background-color: #1C1814;
 }
 .technics__right {
   padding-left: 100px;
-  max-width: 501px;
+  max-width: 638px;
   width: 100%;
 }
 .technics__image {
@@ -734,7 +836,7 @@ button {
 }
 .technics__title {
   font-family: "Righteous Regular";
-  font-size: 48pxpx;
+  font-size: 48px;
   line-height: 50px;
   color: #fff;
   margin-bottom: 36px;
@@ -745,7 +847,75 @@ button {
   line-height: 28px;
   color: #fff;
   margin-bottom: 36px;
+  text-transform: capitalize;
 }
 .technics__btn {
   display: inline-block;
+}
+
+.menu {
+  padding: 70px 0;
+}
+.menu__container {
+  max-width: 1200px;
+}
+.menu__subtitle {
+  font-family: "Urbanist SemiBold", sans-serif;
+  font-size: 18px;
+  line-height: 20px;
+  color: #C99E71;
+  text-align: center;
+  margin-bottom: 12px;
+}
+.menu__title {
+  font-family: "Righteous Regular", sans-serif;
+  font-size: 48px;
+  line-height: 50px;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 56px;
+}
+.menu__text {
+  font-family: "Righteous Regular", sans-serif;
+  font-size: 24px;
+  line-height: 26px;
+  color: #fff;
+  margin-left: 20px;
+  margin-right: auto;
+}
+.menu__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 42px;
+  grid-row-gap: 36px;
+}
+.menu__item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #32323D;
+  padding: 24px;
+}
+
+.reviews {
+  padding: 70px 0;
+}
+.reviews__container {
+  max-width: 1200px;
+}
+.reviews__subtitle {
+  font-family: "Urbanist SemiBold", sans-serif;
+  font-size: 18px;
+  line-height: 20px;
+  color: #C99E71;
+  text-align: center;
+  margin-bottom: 12px;
+}
+.reviews__title {
+  font-family: "Righteous Regular", sans-serif;
+  font-size: 48px;
+  line-height: 50px;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 56px;
 }
