--- a/src/scss/sections/_products.scss
+++ b/src/scss/sections/_products.scss
@@ -1,6 +1,5 @@
 .products {
     padding: 70px 0;
-    background-color: $dark-brown;
     &__subtitle {
         font-family: $urbanist-semiBold, $sans-serif;
         font-size: 18px;
@@ -28,14 +27,9 @@
             width: auto;
             transform: translate(0);
         }
-        // &.slick-initialized .slick-slide {
-        //     display: flex;
-        // }
-        // .slick-list {
-        //     margin-left: -30px;
-        //     overflow: hidden;
-        // }
         &-link {
+            display: block;
+            margin: 0 18px;
             background-color: $dark-blue;
             width: 100%;
             max-width: 30%;
@@ -107,3 +101,4 @@
     color: $light-brown;
     text-transform: uppercase;
 }
+
