--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,3 +26,4 @@ body {
 @import "./sections/technics";
 @import "./sections/menu";
 @import "./sections/reviews";
+@import "./sections/reservation";
