--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -10,6 +10,7 @@
     &__controls {
         display: flex;
         justify-content: flex-end;
+        align-items: center;
     }
     &__link {
         padding: 31px 22px;
