--- a/src/css/style.css
+++ b/src/css/style.css
@@ -563,6 +563,95 @@ body {
   opacity: 0.8;
 }
 
+.footer {
+  padding: 70px 0 0 0;
+}
+.footer__wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 72px;
+}
+.footer__container {
+  max-width: 1200px;
+}
+.footer__form {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.footer__link {
+  padding: 31px 22px;
+  display: inline-block;
+}
+.footer__logo {
+  margin-right: 15px;
+}
+.footer__text {
+  font-size: 18px;
+  font-family: "Inter Regular", sans-serif;
+  color: #fff;
+  line-height: 22px;
+  transition: all 0.2s linear;
+}
+.footer__text:hover {
+  color: #C99E71;
+}
+.footer__form {
+  text-align: center;
+  position: relative;
+}
+.footer__input {
+  width: 100%;
+  background-color: #1C1814;
+  border-radius: 36px;
+  padding: 25px 52px 25px;
+  font-size: 18px;
+  font-family: "Urbanist SemiBold";
+  line-height: 18px;
+  border: 0;
+  color: #fff;
+}
+.footer__input::placeholder {
+  font-size: 16px;
+  font-family: "Urbanist Medium";
+  line-height: 18px;
+  opacity: 0.8;
+  color: #fff;
+  text-transform: capitalize;
+}
+.footer__btn {
+  position: absolute;
+  right: 12px;
+  z-index: 3;
+  cursor: pointer;
+  margin: 0 auto;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #C99E71;
+  transition: all 0.2s linear;
+}
+.footer__btn:hover {
+  opacity: 0.8;
+}
+.footer__copyright {
+  padding: 32px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1C1814;
+}
+.footer__copyright-text {
+  font-family: "Urbanist Medium", sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+  color: #fff;
+}
+
 .header {
   background-color: #14110E;
   display: flex;
@@ -1107,6 +1196,9 @@ body {
 .news {
   padding: 70px 0;
 }
+.news__wrap {
+  padding: 24px;
+}
 .news__subtitle {
   font-family: "Urbanist SemiBold", sans-serif;
   font-size: 18px;
@@ -1124,4 +1216,50 @@ body {
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 56px;
+}
+.news__slider {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
+.news__slider-link {
+  display: block;
+  background-color: #1C1814;
+  width: 100%;
+  max-width: 32%;
+  margin: 0 18px;
+}
+.news__slider img {
+  display: block;
+  width: 100%;
+}
+.news__slider-title {
+  font-family: "Righteous Regular", sans-serif;
+  font-size: 20px;
+  line-height: 30px;
+  color: #fff;
+  text-transform: capitalize;
+  margin-bottom: 33px;
+}
+.news__slider-top {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 16px;
+}
+.news__slider-bottom {
+  display: flex;
+  align-items: center;
+}
+.news__by, .news__date {
+  font-family: "Urbanist Medium", sans-serif;
+  font-size: 18px;
+  line-height: 20px;
+  color: #fff;
+}
+.news__more {
+  font-family: "Urbanist Medium", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  color: #C99E71;
+  margin-right: 20px;
 }
